--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "bootstrap": "^5.2.2",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.6.1",
+    "ngx-wow": "^2.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "wowjs": "^1.1.3",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
